# TermTube

./: .gitignore  CONTRIBUTING.md  README.md  play.bat  play.sh
.github/ISSUE_TEMPLATE/: bug_report.md
termtube/: pyproject.toml
termtube/termtube/: __init__.py  cli.py  player.py  render.py  resolver.py
